--- a/style.css
+++ b/style.css
@@ -32,13 +32,24 @@
     color: var(--cor-verde-escuro);
     text-align: center;
 }
-.botao {
-    width: 30%;
+.btn {
+    width: 40%;
     background-color: var(--cor-verde);
+    border-color: var(--cor-verde-escuro);
 }
 .img_sucu_branco {
     padding: 4%;
 }
 .img_sucu_branco img {
     width: 80%;
+}
+.cards {
+    background-color: var(--cor-verde);
+}
+.card-title {
+    text-align: center;
+}
+.button {
+    display: flex;
+    justify-content: center;
 }
